--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
       <div class="form-ctn">
         <h1>Check Your Age In Weeks</h1>
         <div class="name-block">
-          <input placeholder="Enter Your Name" id="name-inp" type="text" required />
+          <input
+            placeholder="Enter Your Name"
+            id="name-inp"
+            type="text"
+            required
+          />
           <label id="inp-label" for="name">Enter Your Name </label>
         </div>
 
@@ -23,40 +28,44 @@
         <button id="check-btn">Check</button>
       </div>
     </form>
-    <section>
+    <section class="about-sector">
       <div class="about-block">
         <article class="weeks-block">
-<h3>Week Sticks</h3>
-          <div id="week-candles-block">
-
+          <h3>Week Sticks</h3>
+          <div id="week-candles-block"> </div>
+          <div class="life-stats">
+            <p>
+              <i></i>
+              <span>Weeks Lived</span>
+            </p>
+            <p>
+              <i class="future"></i>
+              <span>Future Weeks</span>
+            </p>
           </div>
-        <div class="life-stats">
-<p>
-  <i></i> 
-  <span>Weeks Lived</span>
- 
-</p>
-<p>
-  <i class="future"></i>
-  <span >Future Weeks</span>
-  
-</p>
-        </div>
         </article>
         <article class="age-block">
           <h3>Facts about you</h3>
-          <p> <em id="name"></em>  you have lived <em id="week">0</em> Weeks, Which is Aprox. <em id="life_per"></em> of a full life </p>
+          <p>
+            <em id="name"></em> you have lived <em id="week">0</em> Weeks, Which
+            is Aprox. <em id="life_per"></em> of a full life
+          </p>
 
-          <p> That's <em id="day">0</em> days of experience and approx. <em id="season">0</em> seasons enjoyed </p>
+          <p>
+            That's <em id="day">0</em> days of experience and approx.
+            <em id="season">0</em> seasons enjoyed
+          </p>
 
           <p>And you have slept <em id="sleep">0</em> hours through that </p>
 
-          <p>You have generated about <em id="thought">0</em> thoughts I your lifetime, so alway think positive 👍🏼</p>
+          <p
+            >You have generated about <em id="thought">0</em> thoughts I your
+            lifetime, so alway think positive 👍🏼</p
+          >
         </article>
-        <article class="fact-block">
+        <article class="fact-block"> </article>
 
-
-        </article>
+        <button class="back-btn">Back</button>
       </div>
     </section>
   </body>
